# i3-xkb-switcher

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  README.md  i3-xkb-switcher.spec  pyproject.toml
.github/workflows/: publish_on_tag.yaml
i3_xkb_switcher/: switcher.py
